HelpMePlay | 1.0.6
	Dialog:
		- Added more pet tamers.