@@ -129,7 +129,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["<Request tithe>"]														= "<Request tithe>"
 	L["<Present Lajos's invitation>"]											= "<Present Lajos's invitation>"
 	L["I know my way around the Sanctum."]										= "I know my way around the Sanctum."
-	L["Are you sure? This action cannot be undone."]							= "Are you sure? This action cannot be undone."
+	L["Are you sure?"]															= "Are you sure?"
 	L["What can you tell me about Cartel So?"]									= "What can you tell me about Cartel So?"
 	L["Begin pet battle."]														= "Begin pet battle."
 	L["Let's do battle!"]														= "Let's do battle!"
@@ -149,6 +149,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["The forces of Mueh'zala have invaded Ardenweald."]						= "The forces of Mueh'zala have invaded Ardenweald."
 	L["Yes!"]																	= "Yes!"
 	L["Quest"]																	= "Quest"
+	L["I have heard this tale before."]											= "I have heard this tale before."
 	L["I've heard this tale before..."]											= "I've heard this tale before..."
 	L["Are you sure you want to skip the Broken Shore introduction?"]			= "Are you sure you want to skip the Broken Shore introduction?"
 	L["I would like you to have the supplies."]									= "I would like you to have the supplies."
@@ -289,6 +290,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Partially-Infused Soul Remnant 1"]										= "Free the Soul Remnant."
 	L["Yira'lya 1"]																= "Do not worry, I will free you."
 	L["Project Lead Allen 1"]													= "I will assist you."
+	L["Fatescribe Roh-Tahl 1"]													= "I am ready to choose my fate in the Shadowlands."
 	L["Sparring Aspirant 1"]													= "Will you spar with me?"
 	L["Sparring Aspirant 2"]													= "I would like to challenge both of you to a spar."
 	L["Lord Herne 1"]															= "I will join the hunt, Lord Herne."
